--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Favicons -->
     <link href="assets/img/logokuu.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="assets/img/logokuu.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -71,7 +71,7 @@
               ilustration
             </h2>
             <div class="d-flex">
-              <a href="#about" class="btn-get-started scrollto">Get Started</a>
+              <a href="#about" class="btn-get-started scrollto">About Us</a>
               <a
                 href="https://www.youtube.com/shorts/jXxF9uHXtGQ"
                 class="btn-watch-video"
@@ -102,14 +102,19 @@
             <div class="col-lg-6 pt-4 pt-lg-0 content">
               <h3>Digital Zona Creations</h3>
               <p class="fst-italic">
-                Kami menjual desain gambar yang menggunakan gaya sesuai dengan
-                moto kami.
+                Dazaci adalah tempat dimana berkumpulnya design-design yang
+                menarik yang dapat digunakan kedalam design branding pakaian,
+                souvenir, dan juga object kreatif lainya. Menjadikan anak muda
+                yang penuh dengan karya menciptakan masa depan yang indah.
               </p>
               <ul>
                 <li><i class="bi bi-check-circle"></i> Gambar ilustrasi</li>
                 <li><i class="bi bi-check-circle"></i> Mockup brand product</li>
               </ul>
-              <p>Desain dengan gaya gambar yang kreativ dan juga elegant.</p>
+              <p>
+                Disini kami anak-anak muda yang ingin menjadi emas negara
+                menciptakan berbagai karya yang menarik.
+              </p>
             </div>
           </div>
         </div>
@@ -209,17 +214,29 @@
                 onclick="showProductDetail(5)"
               />
             </div>
+            <div class="product">
+              <img
+                src="assets/img/botak.png"
+                alt=""
+                onclick="showProductDetail(6)"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="assets/img/muzan.png"
+                alt=""
+                onclick="showProductDetail(7)"
+              />
+            </div>
           </div>
 
           <div class="product-detail-overlay" onclick="hideProductDetail()">
-            <div class="product-detail">
-              <img src="" alt="" id="product-detail-image" />
-              <div class="product-detail-info">
-                <p class="judul" id="product-detail-name"></p>
-                <p id="product-detail-description"></p>
-                <p id="product-detail-price"></p>
-                <button class="buy-btn" onclick="buyNow()">Beli</button>
-              </div>
+            <img src="" alt="" id="product-detail-image" />
+            <div class="product-detail-info">
+              <p class="judul" id="product-detail-name"></p>
+              <p id="product-detail-description"></p>
+              <p id="product-detail-price"></p>
+              <button class="buy-btn" onclick="buyNow()">Beli</button>
             </div>
           </div>
         </div>
@@ -366,7 +383,8 @@
           >. All Rights Reserved
         </div>
         <div class="admin">
-          <a href="login.php" class="fas fa-user">Admin view</a>
+          <strong><span>Form</span></strong>
+          .Akhmad Arfani
         </div>
       </div>
     </footer>
